# ai-mines-js

./: .gitignore  .prettierignore  AGENTS.md  REQUIREMENTS.md  SYSTEM.md  TASKS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
apps/web-three/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-three/src/: InputHandler.ts  MapRenderer.ts  WorkerRenderer.ts  main.ts  ui.ts
apps/web-three/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-three/src-tauri/capabilities/: default.json
apps/web-three/src-tauri/icons/: icon.icns
apps/web-three/src-tauri/src/: lib.rs  main.rs  persistence.rs
apps/web-three/src-tauri/src/migrations/: 0001_initial.sql
apps/web-three/src/persistence/: index.ts  localStorageSaveAdapter.ts  saveAdapter.ts  stateJson.ts  tauriSaveAdapter.ts
docs/: architecture.md  engine-api.md  game-design.md  persistence.md
